[package]
name = "marinade-anchor-client"
description = "CLI example of getting Marinade state with anchor-client"
repository = "https://github.com/marinade-finance/validator-manager"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "marinade-anchor-client"
path = "src/main.rs"

[dependencies]
anchor-client = "0.29.0"
anchor-spl = "0.29.0"
marinade-finance = { git = "https://github.com/marinade-finance/liquid-staking-program.git", branch = "anchor-0.29", features = ["no-entrypoint"] }
anyhow = "1.0.40"
